# minimc

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  alpha_boundaries.txt  beta_boundaries.txt
.github/workflows/: cmake.yml
benchmarks/: broomstick.xml  continuous_temperature.xml  multi_zone.xml  single_zone.xml
data/: H_in_H2O_alpha_coefficients_293.6K_to_647.2K.hdf5  H_in_H2O_beta_coefficients_293.6K_to_647.2K.hdf5  H_in_H2O_sab.hdf5  majorant_chapman_data_safety_factor_1.05.hdf5  scatter_xs_chapman_data.hdf5
data/debug/: uniform-0.975b.hdf5  uniform-1.000b.hdf5  uniform-1.025b.hdf5  uniform-1.950b.hdf5  uniform-2.000b.hdf5  uniform-2.050b.hdf5
data/endfb71/: n-H1_0-elastic.hdf5  n-H1_0-gamma.hdf5  n-H1_0-total.hdf5
data/endfb8/: n-H1_0-elastic.csv  n-H1_0-elastic.hdf5  n-H1_0-gamma.csv  n-H1_0-gamma.hdf5  n-H1_0-total.csv  n-H1_0-total.hdf5  n-O16_0-elastic.csv  n-O16_0-elastic.hdf5  n-O16_0-gamma.csv  n-O16_0-gamma.hdf5  n-O16_0-total.csv  n-O16_0-total.hdf5  n-U235_0-chi.csv  n-U235_0-elastic.csv  n-U235_0-elastic.hdf5  n-U235_0-fission.csv  n-U235_0-fission.hdf5  n-U235_0-gamma.csv  n-U235_0-gamma.hdf5  n-U235_0-nubar.csv  n-U235_0-nubar.hdf5  n-U235_0-total.csv  n-U235_0-total.hdf5
data/mcnp_endfb71/: n-H1_0-elastic.hdf5  n-H1_0-gamma.hdf5  n-H1_0-total.hdf5
data/tnsl/endfb8/: alpha_endfb8_0_CDF_coeffs.hdf5  alpha_endfb8_1_beta_T_coeffs.hdf5  alpha_endfb8_2_beta_T_coeffs.hdf5  alpha_endfb8_full_CDF_coeffs.hdf5  (+28 more)
data/tsl/: alpha_cdf_chapman_S_coeffs.hdf5  alpha_cdf_chapman_beta_coeffs.hdf5  beta_chapman_data_E_CDF_coeffs.hdf5  beta_chapman_data_S_coeffs.hdf5  scatter_xs_chapman_data_E_coeffs.hdf5  scatter_xs_chapman_data_S_coeffs.hdf5
doc/: CMakeLists.txt  developer_guide.dox  estimators.dox  header.html  mainpage.dox  mycode.js  stream_delegates.dox  style_guide.dox  theory.dox  transport_methods.dox
docs/: _bank_8hpp_source.html  _basic_types_8hpp.html  _basic_types_8hpp.js  _basic_types_8hpp__dep__incl.map  _basic_types_8hpp__dep__incl.md5  _basic_types_8hpp__incl.map  _basic_types_8hpp__incl.md5  _basic_types_8hpp_source.html  _bins_8hpp_source.html  _c_s_g_surface_8hpp_source.html  _cell_8hpp_source.html  _constants_8hpp_source.html  _continuous_8hpp_source.html  _continuous_evaluation_8hpp_source.html  _continuous_map_8hpp_source.html  _continuous_reaction_8hpp_source.html  _driver_8hpp_source.html  _estimator_8hpp_source.html  _fixed_source_8hpp_source.html  _h_d_f5_data_set_8hpp_source.html  _interaction_8hpp_source.html  _k_eigenvalue_8hpp_source.html  _material_8hpp_source.html  _multigroup_8hpp_source.html  _nuclide_8hpp_source.html  _particle_8hpp_source.html  _perturbation_8hpp_source.html  _point_8hpp_source.html  _reaction_8hpp_source.html  _scalar_field_8hpp_source.html  _scorable_8hpp_source.html  _sensitivity_8hpp_source.html  _source_8hpp_source.html  _stream_delegate_8hpp_source.html  _thermal_scattering_8hpp_source.html  _transport_method_8hpp_source.html  _world_8hpp_source.html  _x_m_l_document_8hpp_source.html  annotated.html  annotated_dup.js  (+437 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  files_0.js  (+48 more)
scripts/: alpha_cdf_chapman_data.hdf5  beta_cdf_chapman_data.hdf5  conf.py  index.rst  linear_alphas.py  majorant_chapman_data.hdf5  mcnp_vs_minimc.py  remove_negative_pdfs.py  sab.py  select_alphas.py  select_betas.py  select_scatterxs.py  simple_alphas.py  simple_betas.py  tnsl_sensitivity.py  update_tsl_node.py
scripts/tolerance_vs_spectrum_error/: tolerance_vs_spectrum_error.hdf5  tolerance_vs_spectrum_error.py
src/: Bank.cpp  Bank.hpp  BasicTypes.hpp  Bins.cpp  Bins.hpp  CMakeLists.txt  CSGSurface.cpp  CSGSurface.hpp  Cell.cpp  Cell.hpp  Constants.hpp  Continuous.cpp  Continuous.hpp  ContinuousEvaluation.cpp  ContinuousEvaluation.hpp  ContinuousMap.hpp  ContinuousReaction.cpp  ContinuousReaction.hpp  Driver.cpp  Driver.hpp  Estimator.cpp  Estimator.hpp  FixedSource.cpp  FixedSource.hpp  HDF5DataSet.cpp  HDF5DataSet.hpp  History.cpp  History.hpp  IndirectEffect.cpp  IndirectEffect.hpp  Interaction.cpp  Interaction.hpp  InteractionDelegate.cpp  InteractionDelegate.hpp  KEigenvalue.cpp  KEigenvalue.hpp  Material.cpp  Material.hpp  Multigroup.cpp  Multigroup.hpp  (+45 more)
src/Estimator/: Estimator.cpp  Estimator.hpp  Proxy.cpp  Proxy.hpp  Visitor.cpp  Visitor.hpp
src/Perturbation/: Perturbation.cpp  Perturbation.hpp
src/Perturbation/IndirectEffect/: IndirectEffect.cpp  IndirectEffect.hpp  Visitor.cpp  Visitor.hpp
src/Perturbation/Sensitivity/: Sensitivity.cpp  Sensitivity.hpp
src/Perturbation/Sensitivity/Proxy/: Proxy.cpp  Proxy.hpp  Visitor.cpp  Visitor.hpp
test/: CMakeLists.txt  Statistics.hpp  absorbing_sphere_leakage_totalxs_sensitivity.xml  broomstick_cosine.xml  broomstick_energy.xml  continuous.xml  continuous_invalid_nuclide_data_path.xml  minimc.xsd  minimc_basictypes.xsd  minimc_schema.xsd  multigroup.xml  multigroup_critical.xml  multigroup_malformed_capture.xml  multigroup_malformed_scatter.xml  multigroup_missing_particle_data.xml  multigroup_nonexistent_nuclide.xml  nonmultiplying_sphere_leakage_totalxs_perturb_hi.xml  nonmultiplying_sphere_leakage_totalxs_perturb_lo.xml  nonmultiplying_sphere_leakage_totalxs_sensitivity.xml  point_source_leakage.xml  simple.xml  simple_continuous.xml  simple_multigroup.xml  single_zone.xml  test_CSGSurface.cpp  test_Cell.cpp  test_FixedSource.cpp  test_HDF5.cpp  test_HDF5_invalid.hdf5  test_HDF5_valid.hdf5  test_Material.cpp  test_Nuclide.cpp  test_Parallel.cpp  test_Particle.cpp  test_Perturbation.cpp  test_Point.cpp  test_ThermalScattering.cpp  test_ThermalScattering.xml  test_ValidateXML.cpp  test_World.cpp  (+10 more)
(+51 files in other folders)
